--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -3,7 +3,7 @@ worker_processes      1;
 daemon off;
 
 events {
-  worker_connections  1024;
+  worker_connections  512;
 }
 
 http {
@@ -35,17 +35,17 @@ http {
     }
 
     # Deny /favicon.ico
-    # location = /favicon.ico {
-    #   access_log      off;
-    #   log_not_found   off;
-    # }
+    location = /favicon.ico {
+      access_log      off;
+      log_not_found   off;
+    }
 
     # Deny /robots.txt
-    # location = /robots.txt {
-    #   allow           all;
-    #   log_not_found   off;
-    #   access_log      off;
-    # }
+    location = /robots.txt {
+      allow           all;
+      log_not_found   off;
+      access_log      off;
+    }
 
     # Status. /status.html uses /status
     location ~ ^/(status|ping)$ {
@@ -55,25 +55,25 @@ http {
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    location / {
-      # wordpress fancy rewrites
-      if (-f $request_filename) {
-        break;
-      }
-      if (-d $request_filename) {
-        break;
-      }
+    #location / {
+    #  # wordpress fancy rewrites
+    #  if (-f $request_filename) {
+    #    break;
+    #  }
+    #  if (-d $request_filename) {
+    #    break;
+    #  }
 
-      rewrite         ^(.+)$ /index.php?q=$1 last;
+    #  rewrite         ^(.+)$ /index.php?q=$1 last;
 
-      # Add trailing slash to */wp-admin requests.
-      rewrite         /wp-admin$ $scheme://$host$uri/ permanent;
+    #  # Add trailing slash to */wp-admin requests.
+    #  rewrite         /wp-admin$ $scheme://$host$uri/ permanent;
 
-      # redirect to feedburner.
-      # if ($http_user_agent !~ FeedBurner) {
-      #   rewrite ^/feed/?$ http://feeds.feedburner.com/feedburner-feed-id last;
-      # }
-    }
+    #  # redirect to feedburner.
+    #  # if ($http_user_agent !~ FeedBurner) {
+    #  #   rewrite ^/feed/?$ http://feeds.feedburner.com/feedburner-feed-id last;
+    #  # }
+    #}
 
     location ~ .*\.php$ {
       include         /app/vendor/nginx/conf/fastcgi_params;
