--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -12,6 +12,7 @@ http {
   sendfile            on;
   keepalive_timeout   65;
   gzip  on;
+   access_log		off;
 
   server {
     listen            <%= ENV['PORT'] %>;
