--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -13,6 +13,8 @@ http {
   keepalive_timeout   65;
   gzip			on;
   access_log		off;
+  proxy_max_temp_file_size	0;
+  #fastcgi_max_temp_file_size	0;
 
   server {
     listen            <%= ENV['PORT'] %>;
