--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -15,6 +15,7 @@ http {
   access_log		off;
   proxy_max_temp_file_size	0;
   #fastcgi_max_temp_file_size	0;
+  limit_conn_zone $binary_remote_addr zone=phplimit:1m; # define a limit bucket for PHP-FPM
 
   server {
     listen            <%= ENV['PORT'] %>;
@@ -84,6 +85,8 @@ http {
     #}
 
     location ~ .*\.php$ {
+      try_files $uri =404;
+      limit_conn phplimit 5; # limit to 5 concurrent users to PHP per IP.
       include         /app/vendor/nginx/conf/fastcgi_params;
       fastcgi_param   HTTPS on; # force SSL
       fastcgi_pass    unix:/tmp/php-fpm.socket;
