--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -18,6 +18,10 @@ http {
   #fastcgi_max_temp_file_size	0;
   limit_conn_zone $binary_remote_addr zone=phplimit:1m; # define a limit bucket for PHP-FPM
 
+  upstream php_fpm {
+    server unix:/tmp/php-fpm.socket;
+  }
+
   server {
     listen            <%= ENV['PORT'] %>;
     server_name       _;
@@ -56,7 +60,7 @@ http {
     location ~ ^/(status|ping)$ {
       include         /app/vendor/nginx/conf/fastcgi_params;
       fastcgi_param   HTTPS on; # force SSL
-      fastcgi_pass    unix:/tmp/php-fpm.socket;
+      fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
@@ -90,7 +94,7 @@ http {
       limit_conn phplimit 5; # limit to 5 concurrent users to PHP per IP.
       include         /app/vendor/nginx/conf/fastcgi_params;
       fastcgi_param   HTTPS on; # force SSL
-      fastcgi_pass    unix:/tmp/php-fpm.socket;
+      fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
   }
