--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -17,6 +17,8 @@ http {
   proxy_max_temp_file_size	0;
   #fastcgi_max_temp_file_size	0;
   limit_conn_zone $binary_remote_addr zone=phplimit:1m; # define a limit bucket for PHP-FPM
+  # don't use server listen port in redirects.
+  port_in_redirect off;
 
   upstream php_fpm {
     server unix:/tmp/php-fpm.socket;
