Correctly pass HTTPS = on to PHP only when SSL is used.
Close #15.

--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -20,6 +20,12 @@ http {
   # don't use server listen port in redirects.
   port_in_redirect off;
 
+  # set $https only when SSL is actually used.
+  map $http_x_forwarded_proto $https {
+    default off;
+    https on;
+  }
+
   upstream php_fpm {
     server unix:/tmp/php-fpm.socket;
   }
@@ -61,7 +67,7 @@ http {
     # Status. /status.html uses /status
     location ~ ^/(status|ping)$ {
       include         /app/vendor/nginx/conf/fastcgi_params;
-      fastcgi_param   HTTPS on; # force SSL
+      fastcgi_param   HTTPS $https if_not_empty;
       fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
@@ -95,7 +101,7 @@ http {
       try_files $uri =404;
       limit_conn phplimit 5; # limit to 5 concurrent users to PHP per IP.
       include         /app/vendor/nginx/conf/fastcgi_params;
-      fastcgi_param   HTTPS on; # force SSL
+      fastcgi_param   HTTPS $https if_not_empty;
       fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
