--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -21,7 +21,7 @@ http {
   port_in_redirect off;
 
   # set $https only when SSL is actually used.
-  map $http_x_forwarded_proto $https {
+  map $http_x_forwarded_proto $my_https {
     default off;
     https on;
   }
@@ -67,7 +67,7 @@ http {
     # Status. /status.html uses /status
     location ~ ^/(status|ping)$ {
       include         /app/vendor/nginx/conf/fastcgi_params;
-      fastcgi_param   HTTPS $https if_not_empty;
+      fastcgi_param   HTTPS $my_https if_not_empty;
       fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
@@ -103,7 +103,7 @@ http {
       try_files $uri =404;
       limit_conn phplimit 5; # limit to 5 concurrent users to PHP per IP.
       include         /app/vendor/nginx/conf/fastcgi_params;
-      fastcgi_param   HTTPS $https if_not_empty;
+      fastcgi_param   HTTPS $my_https if_not_empty;
       fastcgi_pass    php_fpm;
       fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
