--- a/support/devcenter/extensions.twig
+++ b/support/devcenter/extensions.twig
@@ -31,7 +31,9 @@
 					{%- set numCaveats = numCaveats + 1 -%}
 					<sup><a title="not available on the heroku-{{ stack }} stack" href="#footnote-{{ type }}-ext-not-{{ stack }}">&#x200b;[&#x200b;{{ number }}&#x200b;]</a></sup>
 				{%- endfor -%}
-				<br />
+				{%- if not loop.last -%}
+					<br />
+				{%- endif -%}
 			{%- else -%}
 				-
 			{%- endfor -%}
