Adjust capitalisation of generated changelog entry title
Switches it to sentence case (only the first letter capitalised, unless
the word is a proper noun such as a Heroku product name), for
consistency with the style used for all other changelog entries:
https://devcenter.heroku.com/changelog

--- a/support/devcenter/changelog.twig
+++ b/support/devcenter/changelog.twig
@@ -1,4 +1,4 @@
-{{"now"|date("F Y", "UTC")}} PHP Updates
+{{"now"|date("F Y", "UTC")}} PHP updates
 ----
 {% if phps %}
 The following new [PHP runtime versions](https://devcenter.heroku.com/articles/php-support#available-versions) are now available:
