--- a/support/devcenter/changelog.twig
+++ b/support/devcenter/changelog.twig
@@ -4,7 +4,7 @@
 The following new [PHP runtime versions](https://devcenter.heroku.com/articles/php-support#available-versions) are now available:
 
 {% for php in phps %}
-- [PHP {{php.version}}](https://www.php.net/ChangeLog-{{php.series}}.php#{{php.version}})
+- [PHP {{php.version}}]({{php.link|raw}})
 {% endfor %}
 
 {% endif -%}
@@ -13,7 +13,11 @@ The following new [PHP runtime versions](https://devcenter.heroku.com/articles/p
 The following [PHP extensions](https://devcenter.heroku.com/articles/php-support#extensions) have been added or updated:
 
 {% for extension in extensions %}
+{% if extension.link %}
+- [`{{extension.name}}` {{extension.version}}]({{extension.link|raw}})
+{% else %}
 - `{{extension.name}}` {{extension.version}}
+{% endif -%}
 {% endfor %}
 
 {% endif -%}
@@ -22,18 +26,18 @@ The following [PHP extensions](https://devcenter.heroku.com/articles/php-support
 The following new [Composer versions](https://devcenter.heroku.com/articles/php-support#available-composer-versions) are now available [for use during builds](https://devcenter.heroku.com/articles/php-support#installation-of-dependencies):
 
 {% for composer in composers %}
-- [Composer {{composer.version}}](https://getcomposer.org/changelog/{{composer.version}})
+- [Composer {{composer.version}}]({{composer.link|raw}})
 {% endfor %}
 
 {% endif -%}
 
 {% if apache %}
-The Apache HTTP [web server](https://devcenter.heroku.com/articles/php-support#web-servers) has been updated to version [{{apache.version}}](https://archive.apache.org/dist/httpd/CHANGES_{{apache.version}}).
+The Apache HTTP [web server](https://devcenter.heroku.com/articles/php-support#web-servers) has been updated to version [{{apache.version}}]({{apache.link|raw}}).
 
 {% endif -%}
 
 {% if nginx %}
-The Nginx [web server](https://devcenter.heroku.com/articles/php-support#web-servers) has been updated to version [{{nginx.version}}](https://nginx.org/en/CHANGES-{{nginx.series}}).
+The Nginx [web server](https://devcenter.heroku.com/articles/php-support#web-servers) has been updated to version [{{nginx.version}}]({{nginx.link|raw}}).
 
 {% endif -%}
 
@@ -43,5 +47,5 @@ The `blackfire` CLI agent program used by `ext-blackfire` has been updated to ve
 {% endif -%}
 
 {% for library in libraries %}
-The `{{library.name}}` library has been updated to version {{library.version}}.
+The `{{library.name}}` library has been updated to version {% if library.link %}[{{library.version}}]({{library.link|raw}}){% else %}{{library.version}}{% endif -%}.
 {% endfor %}
