--- a/support/devcenter/changelog.twig
+++ b/support/devcenter/changelog.twig
@@ -1,4 +1,4 @@
-{{"now"|date("F Y", "UTC")}} PHP updates
+PHP updates - {{"now"|date("F Y", "UTC")}}
 ----
 {% if phps %}
 The following new [PHP runtime versions](https://devcenter.heroku.com/articles/php-support#available-versions) are now available:
